<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_button_title">Submit</string>
    <string name="grid_image_description">Image</string>
    <string name="default_image_title">New Text</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="site_name_label">Site Name:</string>
    <string name="image_type_label">Image Type:</string>
    <string name="image_color_label">Image Color:</string>
    <string name="image_size_label">Image Size:</string>
    <string name="advanced_filters_title">Advanced Filters</string>
    <string name="set_filter_button_title">Save</string>
    <string name="action_filters">Filters</string>

</resources>
