<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:paddingBottom="20dp"
    android:paddingRight="20dp"
    android:paddingEnd="20dp"
    tools:context="com.ravcode.imagesearch.fragments.AdvancedImageFiltersFragment">

    <LinearLayout
        android:id="@+id/llSizeContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:text="@string/image_size_label"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:spinnerMode="dropdown"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llColorContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llSizeContainer"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:text="@string/image_color_label"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:spinnerMode="dropdown"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTypeContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llColorContainer"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:text="@string/image_type_label"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:spinnerMode="dropdown"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSiteNameContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llTypeContainer"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="san-serif-light"
            android:text="@string/site_name_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etSiteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="san-serif-light"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/bSaveFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llSiteNameContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/set_filter_button_title" />

</RelativeLayout>
